--- a/css/mstyle.css
+++ b/css/mstyle.css
@@ -371,7 +371,7 @@ transform: scale(1.3);
 .testi{
   box-shadow: 10px 9px 12px 12px rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
   background:url(../images/testimonial_banner.jpg);
-  background-attachment: fixed;
+/*   background-attachment: fixed; */
   z-index: -1;
  background-position: center;
  background-repeat: no-repeat;
